se agrego el boton enviar en formulario.html

--- a/formulario.html
+++ b/formulario.html
@@ -18,6 +18,7 @@
         <input  id="email"  type="email"    value="Ingresar Email">
         <label  for="comentario">Comentario</label>
         <textarea  id="comentario"></textarea>
+        <button type="submit">Enviar</button>
     </form>
     <!--Volver a página principal-->
     <footer>
